--- a/hive-model/pom.xml
+++ b/hive-model/pom.xml
@@ -26,9 +26,9 @@
         <scala.version>2.11.5</scala.version>
         <scala.dependencies.version>2.11</scala.dependencies.version>
 
+        <org.specs2.version>3.6</org.specs2.version>
         <jodatime.version>2.5</jodatime.version>
         <jackson.version>2.4.4</jackson.version>
-        <org.specs2.version>2.4.15</org.specs2.version>
         <joda.convert.version>1.2</joda.convert.version>
         <accord.version>0.4.2</accord.version>
     </properties>
@@ -93,7 +93,13 @@
 
         <dependency>
             <groupId>org.specs2</groupId>
-            <artifactId>specs2_${scala.dependencies.version}</artifactId>
+            <artifactId>specs2-core_${scala.dependencies.version}</artifactId>
+            <version>${org.specs2.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2-junit_${scala.dependencies.version}</artifactId>
             <version>${org.specs2.version}</version>
             <scope>test</scope>
         </dependency>
