--- a/hive-model/pom.xml
+++ b/hive-model/pom.xml
@@ -24,6 +24,7 @@
         <groupId>com.wixpress</groupId>
         <artifactId>hive-api-scala-modules</artifactId>
         <version>1.3.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <dependencies>
