now parent from seperate nodule to support n-build-1-repo on CI

--- a/hive-api-scala-testkit/pom.xml
+++ b/hive-api-scala-testkit/pom.xml
@@ -22,7 +22,7 @@
 
     <parent>
         <groupId>com.wixpress</groupId>
-        <artifactId>hive-api-scala-modules</artifactId>
+        <artifactId>hive-api-scala-parent</artifactId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
 
