--- a/hive-model/pom.xml
+++ b/hive-model/pom.xml
@@ -22,9 +22,8 @@
 
     <parent>
         <groupId>com.wixpress</groupId>
-        <artifactId>hive-api-scala-modules</artifactId>
+        <artifactId>hive-api-scala-parent</artifactId>
         <version>1.3.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <dependencies>
