--- a/hive-parent/pom.xml
+++ b/hive-parent/pom.xml
@@ -55,6 +55,7 @@
         <finagle-http.version>6.24.0</finagle-http.version>
         <servlet.version>3.0.1</servlet.version>
         <commons-net.version>3.3</commons-net.version>
+        <spring-web.version>4.1.1.RELEASE</spring-web.version>
         <spring-test.version>4.1.1.RELEASE</spring-test.version>
         <spray-client.version>1.3.2</spray-client.version>
         <ning.version>1.8.10</ning.version>
