--- a/hive-model/pom.xml
+++ b/hive-model/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wixpress</groupId>
     <artifactId>hive-model</artifactId>
     <version>1.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -21,7 +20,7 @@
 
 
     <parent>
-        <groupId>com.wixpress</groupId>
+        <groupId>com.wix.hive</groupId>
         <artifactId>hive-api-scala-parent</artifactId>
         <version>1.3.0-SNAPSHOT</version>
         <relativePath>../hive-parent/pom.xml</relativePath>
