--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wixpress</groupId>
+    <groupId>com.wix.hive</groupId>
     <artifactId>hive-api-scala-modules</artifactId>
     <version>1.3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
