added hive-parent to aggregator pom

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <description>Scala library to work with the Hive Api</description>
 
     <modules>
+        <module>hive-parent</module>
         <module>hive-model</module>
         <module>hive-api-scala</module>
         <module>hive-api-scala-testkit</module>
